deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: k8s-heist
  name: k8s-heist
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 3000
  selector:
    app: k8s-heist
  type: ClusterIP
