deploy/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: k8s-heist
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: heist.xyz.com
    http:
      paths:
      - path: /
        backend:
          serviceName: k8s-heist
          servicePort: 3000
